[metadata]
name = disqueue
version = 0.0.1
author = fkfv
author_email = 20618646+fkfv@users.noreply.github.com
description = Disqueue Python client
long_description = file: README.md
url = https://github.com/fkfv/disqueue
project_urls =
  Bug Tracker = https://github.com/fkfv/disqueue/issues

classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src
